--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,25 +1,21 @@
-<h1>Pokemons List</h1>
-<input 
-    #input
-    (keyup.enter)="selectPokemon(input.value)"
-    type="number"  
-/>
+<h1 class="center">Pokédex</h1>
 
-<p *ngIf="pokemonSelected"> 
-    Vous avez sélectionné le pokemon : {{ pokemonSelected?.name }}
-</p>
-<p *ngIf="!pokemonSelected"> 
-    Vous avez sélectionné un pokemon inexistant
-</p>
-<p>{{ pokemonsList[0].name}}</p>
-<p>{{ pokemonsList[1].name}}</p>
-<p>{{ pokemonsList[2].name}}</p>
-<p>{{ pokemonsList[3].name}}</p>
-<p>{{ pokemonsList[4].name}}</p>
-<p>{{ pokemonsList[5].name}}</p>
-<p>{{ pokemonsList[6].name}}</p>
-<p>{{ pokemonsList[7].name}}</p>
-<p>{{ pokemonsList[8].name}}</p>
-<p>{{ pokemonsList[9].name}}</p>
-<p>{{ pokemonsList[10].name}}</p>
-<p>{{ pokemonsList[11].name}}</p>
+<div class="container">
+    <div class="row">
+        <div *ngFor="let pokemon of pokemonsList" class="col m4 s6">
+            <div class="card horizontal">
+                <div class="card-image">
+                    <img [src]="pokemon.picture">
+                </div>
+                <div class="card-stacked">
+                    <div class="card-content">
+                        <p> {{pokemon.name}}</p>
+                        <p><small>{{pokemon.created}}</small></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
