--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
 <div class="container">
     <div class="row">
         <div *ngFor="let pokemon of pokemonsList" class="col m4 s6">
-            <div class="card horizontal">
+            <div class="card horizontal" pkmnBorderCard>
                 <div class="card-image">
                     <img [src]="pokemon.picture">
                 </div>
@@ -17,5 +17,3 @@
         </div>
     </div>
 </div>
-
-
