Nav 2 pages + 404 et redirection

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,10 @@
-<h1 class="center">Pokédex</h1>
+<nav>
+    <div class="nav-wrapper red">
+        <a href="#" class="brand-logo center">
+            POKÉDEX
+        </a>
+    </div>
+</nav>
 
 <router-outlet></router-outlet>
 
